# agentsmith

./: CONTRIBUTING.md  Cargo.toml  README.md
examples/: atuin_search_demo.rs  basic.rs  import_old_logs.rs  persistent_chat.rs
migrations/: 20251117000001_init.sql
src/: error.rs  history.rs  lib.rs  smart_agent.rs  trace.rs
tests/: test.rs
